@@ -13,6 +13,7 @@
 - fixed `protocol` parser for WebSocket routes
 - fixed CSS variables
 - added `schema.undefine(name)` for removing of defined field in the schema
+- added `options.servicemode` to the start script for running Total.js app without HTTP server
 
 ========================
 0.0.45
